{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 16,
  "lineage": "59489152-7117-4923-ede7-599a02609d2a",
  "resources": [
    {
      "module": "module.internetgateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:internet-gateway/igw-0aaaacf4a03f2c3a4",
            "id": "igw-0aaaacf4a03f2c3a4",
            "owner_id": "485146087273",
            "tags": {
              "Name": "kamil_gw"
            },
            "tags_all": {
              "Name": "kamil_gw"
            },
            "vpc_id": "vpc-0b7f328ec9f1fc2c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ede7b7c461cbc4e3",
            "domain": "vpc",
            "id": "eipalloc-0ede7b7c461cbc4e3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-130-253.compute-1.amazonaws.com",
            "public_ip": "52.22.130.253",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ede7b7c461cbc4e3",
            "connectivity_type": "public",
            "id": "nat-0be41281d624df292",
            "subnet_id": "subnet-0963ec8bd0efe755e",
            "tags": {
              "Name": "kamil-gw-NAT"
            },
            "tags_all": {
              "Name": "kamil-gw-NAT"
            }
          },
          "dependencies": [
            "module.natgateway.aws_eip.eip",
            "module.pub_subnet.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.priv-rta",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.priv_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:subnet/subnet-07a9bf746f64a9937",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.167.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a9bf746f64a9937",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485146087273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kamil_priv_subnet"
            },
            "tags_all": {
              "Name": "kamil_priv_subnet"
            },
            "vpc_id": "vpc-0b7f328ec9f1fc2c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.private_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4f7023847b90238",
            "arn": "arn:aws:ec2:us-east-1:485146087273:instance/i-0eef5ea6a4ef133f6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eef5ea6a4ef133f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09f65c34733e6b578"
              }
            ],
            "primary_network_interface_id": "eni-09f65c34733e6b578",
            "private_dns": "ip-192-167-5-11.ec2.internal",
            "private_ip": "192.167.5.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a13d44155262324",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a9bf746f64a9937",
            "tags": {
              "Name": "kamil_priv_ec2_instance"
            },
            "tags_all": {
              "Name": "kamil_priv_ec2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e96950cf0933ae06"
            ]
          },
          "dependencies": [
            "module.priv_subnet.aws_subnet.subnets",
            "module.private_ec2.aws_network_interface.priv_nic",
            "module.private_ec2.aws_security_group.priv_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "priv_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:network-interface/eni-09f65c34733e6b578",
            "id": "eni-09f65c34733e6b578",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:ff:98:84:44:1f",
            "owner_id": "485146087273",
            "private_ip": "192.167.5.11",
            "private_ip_list": [
              "192.167.5.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.167.5.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e96950cf0933ae06"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a9bf746f64a9937"
          },
          "dependencies": [
            "module.priv_subnet.aws_subnet.subnets",
            "module.private_ec2.aws_security_group.priv_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "priv_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:security-group/sg-0e96950cf0933ae06",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e96950cf0933ae06",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.167.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_priv_sg",
            "name_prefix": "",
            "owner_id": "485146087273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_priv_ec2"
            },
            "tags_all": {
              "Name": "sg_for_priv_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7f328ec9f1fc2c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub-rta",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d34884e3bec4a82b",
            "route_table_id": "rtb-069942a9745660899",
            "subnet_id": "subnet-0963ec8bd0efe755e"
          },
          "dependencies": [
            "module.internetgateway.aws_internet_gateway.gw",
            "module.pub_subnet.aws_subnet.subnets",
            "module.public-route.aws_route_table.rt",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:subnet/subnet-0963ec8bd0efe755e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.167.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0963ec8bd0efe755e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485146087273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kamil_pub_subnet"
            },
            "tags_all": {
              "Name": "kamil_pub_subnet"
            },
            "vpc_id": "vpc-0b7f328ec9f1fc2c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:route-table/rtb-069942a9745660899",
            "id": "rtb-069942a9745660899",
            "owner_id": "485146087273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aaaacf4a03f2c3a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kamil_pub_rt"
            },
            "tags_all": {
              "Name": "kamil_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7f328ec9f1fc2c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internetgateway.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4f7023847b90238",
            "arn": "arn:aws:ec2:us-east-1:485146087273:instance/i-0c854bc99bbd48243",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c854bc99bbd48243",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-03fc77bfec386c360"
              }
            ],
            "primary_network_interface_id": "eni-03fc77bfec386c360",
            "private_dns": "ip-192-167-1-11.ec2.internal",
            "private_ip": "192.167.1.11",
            "public_ip": "35.153.50.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e729e45d3f11103",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0963ec8bd0efe755e",
            "tags": {
              "Name": "kamil_pub_ec2_instance"
            },
            "tags_all": {
              "Name": "kamil_pub_ec2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d9263a7dc7e1453"
            ]
          },
          "dependencies": [
            "module.pub_subnet.aws_subnet.subnets",
            "module.public_ec2.aws_network_interface.pub_nic",
            "module.public_ec2.aws_security_group.pub_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "pub_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:network-interface/eni-03fc77bfec386c360",
            "id": "eni-03fc77bfec386c360",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:c6:19:22:87:6d",
            "owner_id": "485146087273",
            "private_ip": "192.167.1.11",
            "private_ip_list": [
              "192.167.1.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.167.1.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05d9263a7dc7e1453"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0963ec8bd0efe755e"
          },
          "dependencies": [
            "module.pub_subnet.aws_subnet.subnets",
            "module.public_ec2.aws_security_group.pub_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:security-group/sg-05d9263a7dc7e1453",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d9263a7dc7e1453",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_pub_sg",
            "name_prefix": "",
            "owner_id": "485146087273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_pub_ec2"
            },
            "tags_all": {
              "Name": "sg_for_pub_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7f328ec9f1fc2c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:vpc/vpc-0b7f328ec9f1fc2c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.167.0.0/16",
            "default_network_acl_id": "acl-01539fbceeb96fefb",
            "default_route_table_id": "rtb-05f98351fedac1f0f",
            "default_security_group_id": "sg-082314828a50dd92b",
            "dhcp_options_id": "dopt-033d2b1ddea21925e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b7f328ec9f1fc2c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f98351fedac1f0f",
            "owner_id": "485146087273",
            "tags": {
              "Name": "kamil_vpc"
            },
            "tags_all": {
              "Name": "kamil_vpc"
            }
          }
        }
      ]
    }
  ]
}